WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11987
ASSERT while loading SVG map
https://bugs.webkit.org/show_bug.cgi?id=11987
Summary
ASSERT while loading SVG map
Eric Seidel (no email)
Reported
2006-12-26 14:09:33 PST
ASSERT while loading SVG map ASSERTION FAILED: !color().hasAlpha() (/Stuff/Projects/WebKit/WebCore/platform/graphics/svg/cg/SVGPaintServerSolidCg.cpp:58 virtual bool WebCore::SVGPaintServerSolid::setup(WebCore::GraphicsContext*&, const WebCore::RenderObject*, WebCore::SVGPaintTargetType, bool) const) zsh: segmentation fault run-safari Should be simple to fix. I have not investigated yet.
Attachments
fix
(50.87 KB, patch)
2006-12-26 19:55 PST
,
Eric Seidel (no email)
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Seidel (no email)
Comment 1
2006-12-26 19:55:20 PST
Created
attachment 12051
[details]
fix The bug was that invalid colors were sneaking through the SVG CSS code (they still are) and tripping an assert down in the SVG painting code. Now we're catching invalid colors in the SVGPaintServer code and defaulting back to no color. Better would be to catch the invalid colors in the CSS code, but that would have been a much larger code change.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug